--- a/index.html
+++ b/index.html
@@ -3,211 +3,368 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>Winter – Bild Wort Zuordnung</title>
+<title>Winter – Lesen sortieren</title>
 
 <style>
-@font-face{
-  font-family: "Schoulschrëft";
-  src: url("https://albrechtclaire1007.github.io/Schoulschr%C3%ABft/Schoulschr%C3%ABft.ttf") format("truetype");
-  font-display: swap;
-}
+  @font-face{
+    font-family:"Louisville";
+    src:url("https://github.com/albrechtclaire1007/winter4/raw/refs/heads/main/LouisvilleIi-Regular.otf") format("opentype");
+    font-display:swap;
+  }
 
-html, body{
-  margin:0;
-  height:100%;
-}
+  html, body{ height:100%; margin:0; }
+  body{
+    background:#eaf2ff url("https://i.postimg.cc/BbCyMf2N/winter-background.png") no-repeat center top;
+    background-size:contain;
+    font-family:"Louisville", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    overflow:hidden;
+  }
 
-body{
-  background: #eaf2ff url("https://i.postimg.cc/BbCyMf2N/winter-background.png") no-repeat center top;
-  background-size: contain;
-  font-family: "Schoulschrëft", sans-serif;
-  overflow: hidden;
-}
+  /* Top instruction bar (same position) */
+  .topBar{
+    position:absolute;
+    top:14px;
+    left:50%;
+    transform:translateX(-50%);
+    width:min(860px, 94vw);
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    gap:10px;
+    z-index:10;
+    pointer-events:auto;
+  }
 
-/* Layout */
-#game{
-  position:absolute;
-  inset:0;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  gap:40px;
-}
+  .instr{
+    width:100%;
+    background:rgba(255,255,255,0.88);
+    border-radius:18px;
+    padding:12px 16px;
+    box-shadow:0 10px 18px rgba(0,0,0,0.14);
+    font-size:22px;
+    text-align:center;
+    line-height:1.2;
+    user-select:none;
+  }
 
-/* Images */
-.images{
-  display:flex;
-  gap:30px;
-}
+  /* Game layout */
+  #game{
+    position:absolute;
+    inset:0;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    gap:36px;
+    padding-top:80px; /* keeps space for topBar */
+    box-sizing:border-box;
+  }
 
-.imgWrap{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:10px;
-  min-width:200px;
-}
+  .images{
+    display:flex;
+    gap:26px;
+    align-items:flex-start;
+    justify-content:center;
+    width:min(1100px, 92vw);
+  }
 
-.imgBtn{
-  width:200px;
-  height:200px;
-  border:none;
-  background:none;
-  cursor:pointer;
-  padding:0;
-}
+  .imgWrap{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    gap:10px;
+    min-width:200px;
+  }
 
-.imgBtn img{
-  width:100%;
-  height:100%;
-  object-fit:contain;
-  filter: drop-shadow(0 10px 16px rgba(0,0,0,0.25));
-}
+  .imgBtn{
+    width:200px;
+    height:200px;
+    border:0;
+    background:transparent;
+    padding:0;
+    cursor:pointer;
+    user-select:none;
+  }
 
-/* Word above image after match */
-.wordAbove{
-  font-size:38px;
-  color:#2e7d32; /* green */
-  visibility:hidden;
-}
+  .imgBtn img{
+    width:100%;
+    height:100%;
+    object-fit:contain;
+    filter:drop-shadow(0 12px 18px rgba(0,0,0,0.22));
+    pointer-events:none;
+  }
 
-/* Words below */
-.words{
-  display:flex;
-  gap:25px;
-}
+  /* Word shown above image when correct (light green, black font) */
+  .wordAbove{
+    font-size:30px;
+    background:rgba(184, 233, 184, 0.95); /* light green */
+    color:#000;
+    padding:8px 12px;
+    border-radius:16px;
+    box-shadow:0 10px 18px rgba(0,0,0,0.14);
+    visibility:hidden;
+    user-select:none;
+  }
 
-.word{
-  min-width:180px;
-  padding:18px 22px;
-  font-size:40px;
-  background:white;
-  border-radius:18px;
-  cursor:pointer;
-  box-shadow:0 8px 18px rgba(0,0,0,0.2);
-  text-align:center;
-}
+  /* Words below */
+  .words{
+    display:flex;
+    gap:18px;
+    align-items:center;
+    justify-content:center;
+    width:min(1100px, 92vw);
+  }
 
-.word.used{
-  visibility:hidden;
-}
+  .word{
+    min-width:190px;
+    padding:16px 18px;
+    font-size:36px;
+    background:rgba(255,255,255,0.90);
+    border-radius:18px;
+    cursor:pointer;
+    box-shadow:0 10px 18px rgba(0,0,0,0.14);
+    text-align:center;
+    user-select:none;
+  }
+  .word.used{ visibility:hidden; }
+
+  /* Bottom center nav: < - x/12 - > */
+  .bottomNav{
+    position:absolute;
+    left:50%;
+    transform:translateX(-50%);
+    bottom:16px;
+    display:flex;
+    gap:14px;
+    align-items:center;
+    justify-content:center;
+    z-index:10;
+    pointer-events:auto;
+  }
+
+  .navBtn{
+    width:66px;
+    height:66px;
+    border-radius:999px;
+    border:0;
+    cursor:pointer;
+    background:rgba(255,255,255,0.85);
+    box-shadow:0 12px 22px rgba(0,0,0,0.22);
+    display:grid;
+    place-items:center;
+    user-select:none;
+  }
+  .navBtn:active{ transform:scale(0.98); }
+  .navBtn[disabled]{ opacity:0.35; cursor:default; box-shadow:none; }
+  .navBtn[disabled]:active{ transform:none; }
+
+  .navBtn svg{ width:30px; height:30px; opacity:0.9; }
+
+  .counterCircle{
+    width:86px;
+    height:66px;
+    border-radius:999px;
+    background:rgba(255,255,255,0.90);
+    box-shadow:0 12px 22px rgba(0,0,0,0.18);
+    display:grid;
+    place-items:center;
+    font-size:22px;
+    user-select:none;
+  }
+
+  @media (max-width: 900px){
+    .instr{ font-size:20px; }
+    .imgBtn{ width:170px; height:170px; }
+    .word{ font-size:32px; min-width:160px; }
+  }
+  @media (max-width: 720px){
+    #game{ gap:22px; padding-top:92px; }
+    .images{ gap:14px; flex-wrap:wrap; }
+    .words{ gap:12px; flex-wrap:wrap; }
+    .imgBtn{ width:150px; height:150px; }
+    .word{ font-size:30px; min-width:150px; }
+    .wordAbove{ font-size:26px; }
+  }
 </style>
 </head>
 
 <body>
+  <div class="topBar">
+    <div class="instr">Liese die Wörter. Klicke auf das Bild, dann auf das passende Wort.</div>
+  </div>
 
-<div id="game">
-  <div class="images" id="images"></div>
-  <div class="words" id="words"></div>
-</div>
+  <div id="game">
+    <div class="images" id="images"></div>
+    <div class="words" id="words"></div>
+  </div>
+
+  <div class="bottomNav">
+    <button class="navBtn" id="prev" aria-label="Zurück">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M15 18l-6-6 6-6"/>
+      </svg>
+    </button>
+
+    <div class="counterCircle" id="counter">0/12</div>
+
+    <button class="navBtn" id="next" aria-label="Weiter">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M9 6l6 6-6 6"/>
+      </svg>
+    </button>
+  </div>
 
 <script>
-const LEVELS = [
-  [
-    { key:"eisbaer", word:"Der Eisbär", img:"https://i.postimg.cc/JHrCY1hM/eisbaer.png" },
-    { key:"berge",   word:"Die Berge",  img:"https://i.postimg.cc/CBHV4ZwK/berge.png" },
-    { key:"vogel",   word:"Der Vogel",  img:"https://i.postimg.cc/JtxLDBTq/vogel.png" },
-    { key:"pinguin", word:"Der Pinguin",img:"https://i.postimg.cc/fkDsRvfg/pinguin.png" }
-  ],
-  [
-    { key:"muetze",   word:"Die Mütze",   img:"https://i.postimg.cc/3WYhxZFf/muetze.png" },
-    { key:"pullover", word:"Der Pullover",img:"https://i.postimg.cc/grmp2KHf/pullover.png" },
-    { key:"decken",   word:"Die Decken",  img:"https://i.postimg.cc/zHzY2JfJ/decken.png" },
-    { key:"tanne",    word:"Die Tanne",   img:"https://i.postimg.cc/qgwThCmX/tanne.png" }
-  ],
-  [
-    { key:"iglu",  word:"Das Iglu",  img:"https://i.postimg.cc/9wmHgWfq/iglu.png" },
-    { key:"kamin", word:"Der Kamin", img:"https://i.postimg.cc/CnhprFK8/kamin.png" },
-    { key:"kerze", word:"Die Kerze", img:"https://i.postimg.cc/vxYw2Qmt/kerze.png" },
-    { key:"kakao", word:"Der Kakao", img:"https://i.postimg.cc/K3GhpZYK/kakao.png" }
-  ]
-];
+  // 3 Stufen = 12 Wörter insgesamt
+  const LEVELS = [
+    [
+      { key:"eisbaer", word:"Der Eisbär", img:"https://i.postimg.cc/JHrCY1hM/eisbaer.png" },
+      { key:"berge",   word:"Die Berge",  img:"https://i.postimg.cc/CBHV4ZwK/berge.png" },
+      { key:"vogel",   word:"Der Vogel",  img:"https://i.postimg.cc/JtxLDBTq/vogel.png" },
+      { key:"pinguin", word:"Der Pinguin",img:"https://i.postimg.cc/fkDsRvfg/pinguin.png" }
+    ],
+    [
+      { key:"muetze",   word:"Die Mütze",   img:"https://i.postimg.cc/3WYhxZFf/muetze.png" },
+      { key:"pullover", word:"Der Pullover",img:"https://i.postimg.cc/grmp2KHf/pullover.png" },
+      { key:"decken",   word:"Die Decken",  img:"https://i.postimg.cc/zHzY2JfJ/decken.png" },
+      { key:"tanne",    word:"Die Tanne",   img:"https://i.postimg.cc/qgwThCmX/tanne.png" }
+    ],
+    [
+      { key:"iglu",  word:"Das Iglu",  img:"https://i.postimg.cc/9wmHgWfq/iglu.png" },
+      { key:"kamin", word:"Der Kamin", img:"https://i.postimg.cc/CnhprFK8/kamin.png" },
+      { key:"kerze", word:"Die Kerze", img:"https://i.postimg.cc/vxYw2Qmt/kerze.png" },
+      { key:"kakao", word:"Der Kakao", img:"https://i.postimg.cc/K3GhpZYK/kakao.png" }
+    ]
+  ];
 
-let level = 0;
-let selectedImage = null;
+  const TOTAL = 12;
 
-const imagesDiv = document.getElementById("images");
-const wordsDiv = document.getElementById("words");
+  const imagesDiv = document.getElementById("images");
+  const wordsDiv = document.getElementById("words");
+  const counterEl = document.getElementById("counter");
+  const btnPrev = document.getElementById("prev");
+  const btnNext = document.getElementById("next");
 
-function shuffle(arr){
-  return arr.slice().sort(()=>Math.random()-0.5);
-}
+  let levelIndex = 0;
+  let selectedImageBtn = null;
 
-function loadLevel(){
-  imagesDiv.innerHTML = "";
-  wordsDiv.innerHTML = "";
-  selectedImage = null;
+  // track solved keys across all levels
+  const solved = new Set();
 
-  const data = LEVELS[level];
-  const imgOrder = shuffle(data);
-  const wordOrder = shuffle(data);
-
-  imgOrder.forEach(item=>{
-    const wrap = document.createElement("div");
-    wrap.className = "imgWrap";
-    wrap.dataset.key = item.key;
-
-    const wordTop = document.createElement("div");
-    wordTop.className = "wordAbove";
-    wordTop.textContent = item.word;
-
-    const btn = document.createElement("button");
-    btn.className = "imgBtn";
-    btn.dataset.key = item.key;
-    btn.innerHTML = `<img src="${item.img}">`;
-    btn.onclick = ()=>selectImage(btn);
-
-    wrap.appendChild(wordTop);
-    wrap.appendChild(btn);
-    imagesDiv.appendChild(wrap);
-  });
-
-  wordOrder.forEach(item=>{
-    const w = document.createElement("div");
-    w.className = "word";
-    w.dataset.key = item.key;
-    w.textContent = item.word;
-    w.onclick = ()=>selectWord(w);
-    wordsDiv.appendChild(w);
-  });
-}
-
-function selectImage(btn){
-  selectedImage = btn;
-}
-
-function selectWord(word){
-  if(!selectedImage) return;
-
-  if(word.dataset.key === selectedImage.dataset.key){
-    // mark word below as used
-    word.classList.add("used");
-
-    // show green word above correct image
-    const wrap = selectedImage.parentElement;
-    const topWord = wrap.querySelector(".wordAbove");
-    topWord.style.visibility = "visible";
-
-    selectedImage = null;
-
-    if(document.querySelectorAll(".word:not(.used)").length === 0){
-      setTimeout(nextLevel, 500);
+  function shuffle(arr){
+    const a = arr.slice();
+    for(let i=a.length-1;i>0;i--){
+      const j = Math.floor(Math.random()*(i+1));
+      [a[i],a[j]] = [a[j],a[i]];
     }
+    return a;
   }
-}
 
-function nextLevel(){
-  level++;
-  if(level < LEVELS.length){
-    loadLevel();
+  function updateCounter(){
+    counterEl.textContent = `${solved.size}/${TOTAL}`;
   }
-}
 
-loadLevel();
+  function loadLevel(i){
+    levelIndex = i;
+    selectedImageBtn = null;
+
+    imagesDiv.innerHTML = "";
+    wordsDiv.innerHTML = "";
+
+    const data = LEVELS[levelIndex];
+    const imgOrder = shuffle(data);
+    const wordOrder = shuffle(data);
+
+    // images (with green box appearing when solved)
+    imgOrder.forEach(item=>{
+      const wrap = document.createElement("div");
+      wrap.className = "imgWrap";
+      wrap.dataset.key = item.key;
+
+      const topWord = document.createElement("div");
+      topWord.className = "wordAbove";
+      topWord.textContent = item.word;
+
+      if(solved.has(item.key)){
+        topWord.style.visibility = "visible";
+      }
+
+      const btn = document.createElement("button");
+      btn.className = "imgBtn";
+      btn.type = "button";
+      btn.dataset.key = item.key;
+      btn.innerHTML = `<img src="${item.img}" alt="">`;
+
+      btn.onclick = ()=>{
+        // select only if not already solved
+        if(solved.has(item.key)) return;
+        selectedImageBtn = btn;
+      };
+
+      wrap.appendChild(topWord);
+      wrap.appendChild(btn);
+      imagesDiv.appendChild(wrap);
+    });
+
+    // words
+    wordOrder.forEach(item=>{
+      const w = document.createElement("div");
+      w.className = "word";
+      w.dataset.key = item.key;
+      w.textContent = item.word;
+
+      if(solved.has(item.key)){
+        w.classList.add("used");
+      }
+
+      w.onclick = ()=>{
+        if(!selectedImageBtn) return;
+        if(solved.has(item.key)) return;
+
+        if(w.dataset.key === selectedImageBtn.dataset.key){
+          // mark solved
+          solved.add(item.key);
+          updateCounter();
+
+          // hide this word below
+          w.classList.add("used");
+
+          // show word above matching image in green box
+          const wrap = selectedImageBtn.parentElement;
+          const topWord = wrap.querySelector(".wordAbove");
+          topWord.style.visibility = "visible";
+
+          selectedImageBtn = null;
+
+          // auto-advance if this level is finished
+          const remaining = LEVELS[levelIndex].some(x => !solved.has(x.key));
+          if(!remaining){
+            setTimeout(()=>{
+              if(levelIndex < LEVELS.length - 1) loadLevel(levelIndex + 1);
+            }, 350);
+          }
+        }
+      };
+
+      wordsDiv.appendChild(w);
+    });
+
+    // nav buttons
+    btnPrev.disabled = (levelIndex === 0);
+    btnNext.disabled = (levelIndex === LEVELS.length - 1);
+  }
+
+  btnPrev.addEventListener("click", ()=>{
+    if(levelIndex > 0) loadLevel(levelIndex - 1);
+  });
+
+  btnNext.addEventListener("click", ()=>{
+    if(levelIndex < LEVELS.length - 1) loadLevel(levelIndex + 1);
+  });
+
+  updateCounter();
+  loadLevel(0);
 </script>
 
 </body>
 </html>
-
